Fixing alignment and vertical spacing

--- a/packages/dapp/src/components/organisms/VaultSelect/VaultSelect.scss
+++ b/packages/dapp/src/components/organisms/VaultSelect/VaultSelect.scss
@@ -1,7 +1,7 @@
 @import "../../_settings/variables.scss";
 
 .vault-select {
-  margin-top: 2 * $dist-3xl;
+  margin-top: $dist-3xl;
   max-width: 4 * $dist-6xl;
   .active {
     border: solid 2px $azure-radiance;
