--- a/packages/dapp/src/pages/Dashboard/Dashboard.scss
+++ b/packages/dapp/src/pages/Dashboard/Dashboard.scss
@@ -1,7 +1,7 @@
 @import "../../components/_settings/variables.scss";
 
 .dashboard {
-  margin-top: 2 * $dist-3xl;
+  margin-top: $dist-m;
   > * {
     margin-bottom: $dist-m;
   }
